feat(ai): 实现AI智能图片上传和审核回调功能
- 新增AI微服务回调接口处理智能图片上传
- 实现COS文件移动功能支持临时目录到正式目录的文件迁移
- 集成RabbitMQ消息队列实现AI审核异步处理
- 添加AI审核回调处理逻辑包括通过、拒绝、存疑三种状态
- 实现多级缓存管理功能用于性能优化测试
- 添加Docker容器化部署配置支持前后端分离部署
- 实现临时文件管理和自动清理机制
- 添加API密钥鉴权确保回调接口安全性
- 实现审核状态流转和站内消息通知机制